feat : viewpager2, tablayout create 설계 작업 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="league_bundesliga">분데스리가</string>
     <string name="league_ligue1">리그 1</string>
     <string name="league_serie_a">세리에 A</string>
+
+    <string name="epl_logo">Premier League</string>
+    <string name="country">England</string>
 </resources>
